--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         const userId = liff.getContext().userId;
 
         // GASのWebアプリURLにデータを送信
-        fetch('YOUR_GAS_WEB_APP_URL', {
+        fetch('https://script.google.com/macros/s/AKfycbxbdkotYcxHYzoZhFEjiYEY1QB5hFaJKz1rKXsc6Z0iTrdI0RJ28cl32KT1LcKRB8HpoQ/exec', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
