--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
         const userId = liff.getContext().userId;
 
         // GASのWebアプリURLにデータを送信
-        fetch('https://script.google.com/macros/s/AKfycbxbdkotYcxHYzoZhFEjiYEY1QB5hFaJKz1rKXsc6Z0iTrdI0RJ28cl32KT1LcKRB8HpoQ/exec', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ userId, username, message }),
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log(data);
-            if(data.result === "success") {
-                liff.closeWindow(); // データ送信成功時にLIFFアプリを閉じる
-            }
-        })
-        .catch(liff.closeWindow());
-    }
+        // fetch('https://script.google.com/macros/s/AKfycbxbdkotYcxHYzoZhFEjiYEY1QB5hFaJKz1rKXsc6Z0iTrdI0RJ28cl32KT1LcKRB8HpoQ/exec', {
+        //     method: 'POST',
+        //     headers: {
+        //         'Content-Type': 'application/json',
+        //     },
+        //     body: JSON.stringify({ userId, username, message }),
+        // })
+        // .then(response => response.json())
+        // .then(data => {
+        //     console.log(data);
+        //     if(data.result === "success") {
+        //         liff.closeWindow(); // データ送信成功時にLIFFアプリを閉じる
+        //     }
+        // })
+        // .catch(liff.closeWindow());
         liff.closeWindow(); 
+    }
     </script>
 </body>
 </html>
