--- a/index.html
+++ b/index.html
@@ -15,33 +15,37 @@
     </form>
 
     <script>
-    async function submitForm() {
-        const username = document.getElementById('username').value;
-        const message = document.getElementById('message').value;
-        console.log('submitForm ====== username:', username);
-        // LIFFの初期化とユーザーIDの取得
-        await liff.init({ liffId: "2003429965-rZvm4pBW" });
-        const userId = liff.getContext().userId;
-        console.log('submitForm ====== userId:', userId);
-        // GASのWebアプリURLにデータを送信
-        // fetch('https://script.google.com/macros/s/AKfycbxbdkotYcxHYzoZhFEjiYEY1QB5hFaJKz1rKXsc6Z0iTrdI0RJ28cl32KT1LcKRB8HpoQ/exec', {
-        //     method: 'POST',
-        //     headers: {
-        //         'Content-Type': 'application/json',
-        //     },
-        //     body: JSON.stringify({ userId, username, message }),
-        // })
-        // .then(response => response.json())
-        // .then(data => {
-        //     console.log(data);
-        //     if(data.result === "success") {
-        //         liff.closeWindow(); // データ送信成功時にLIFFアプリを閉じる
-        //     }
-        // })
-        // .catch(liff.closeWindow());
-        liff.closeWindow(); 
-        console.log('submitForm ====== end')
-    }
-    </script>
+        async function submitForm() {
+            const username = document.getElementById('username').value;
+            const message = document.getElementById('message').value;
+            console.log('submitForm ====== username:', username);
+            // LIFFの初期化とユーザーIDの取得
+            await liff.init({ liffId: "2003429965-rZvm4pBW" });
+            const userId = liff.getContext().userId;
+            console.log('submitForm ====== userId:', userId);
+        
+            // GASのWebアプリURLにデータを送信
+            fetch('https://script.google.com/macros/s/AKfycbxbdkotYcxHYzoZhFEjiYEY1QB5hFaJKz1rKXsc6Z0iTrdI0RJ28cl32KT1LcKRB8HpoQ/exec', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ userId, username, message }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                if(data.result === "success") {
+                    liff.closeWindow(); // データ送信成功時にLIFFアプリを閉じる
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                liff.closeWindow(); // データ送信失敗時にもLIFFアプリを閉じる
+            });
+        
+            console.log('submitForm ====== end')
+        }
+        </script>
 </body>
 </html>
